--- a/static/style.css
+++ b/static/style.css
@@ -32,10 +32,10 @@ body {
 }
 .login { 
 	position: absolute;
-	top: 25%;
+	top: 20%;
 	left: 50%;
 	margin: -150px 0 0 -150px;
-	width:400px;
+	width:800px;
 	height:400px;
 }
 
@@ -63,10 +63,15 @@ input {
 
 input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
 
+.slidecontainer {
+	width: 45%; 
+	display: inline;
+}
 
 select { 
-	width: 100%; 
+	width: 45%; 
 	margin-bottom: 10px; 
+	margin-left: 10px;
 	background: rgba(0, 0, 0, 0.3);
 	border: none;
 	outline: none;
@@ -84,7 +89,21 @@ select {
 	transition: box-shadow .5s ease;
 }
 option {
-	background: rgba(0, 0, 0, 0.849);
+	background: rgba(47, 145, 238, 0.849);
 }
 
 select:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
+
+
+.flex-container {
+	display: flex;
+	height: 800px;
+	width: 800px;
+	flex-wrap: wrap;
+	gap: 10px 20px;
+}
+
+.flex-item {
+	width: 45%;
+	margin: auto;
+}
