Centre the input form

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,10 +8,15 @@
 <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='./style.css') }}">
+
+
+
 </head>
 
 
 <body>
+
+
  <div class="login">
 	<h1>Predict Housing Affordability</h1>
 
@@ -38,7 +43,7 @@
         <option value="13">Al Marfa</option>	
         <option value="14">Al Mu!tarid</option>	
         <option value="15">Al_Mushrif</option>	
-        <option value="16">Al_Mutaw!a</option>	h
+        <option value="16">Al_Mutaw!ah</option>
         <option value="17">Al_Muwaij!i</option>	
         <option value="18">Al_Nahyan</option>	
         <option value="19">Al_Qattarah</option>	
@@ -256,6 +261,7 @@
     document.getElementById("culturalF").innerHTML = this.value;
   }
 </script> 
+
 
 </body>
 </html>
