--- a/static/style.css
+++ b/static/style.css
@@ -33,7 +33,7 @@ body {
 .login { 
 	position: absolute;
 	top: 20%;
-	left: 50%;
+	left: 40%;
 	margin: -150px 0 0 -150px;
 	width:800px;
 	height:400px;
@@ -89,7 +89,7 @@ select {
 	transition: box-shadow .5s ease;
 }
 option {
-	background: rgba(47, 145, 238, 0.849);
+	background: rgba(56, 66, 75, 0.849);
 }
 
 select:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
@@ -97,8 +97,7 @@ select:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rg
 
 .flex-container {
 	display: flex;
-	height: 800px;
-	width: 800px;
+	width: 100%;
 	flex-wrap: wrap;
 	gap: 10px 20px;
 }
@@ -107,3 +106,4 @@ select:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rg
 	width: 45%;
 	margin: auto;
 }
+
