--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,7 @@
 
 html { width: 100%; height:100%; overflow:hidden; }
 
+
 body { 
 	width: 100%;
 	height:100%;
@@ -30,6 +31,7 @@ body {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );
 
 }
+
 .login { 
 	position: absolute;
 	top: 20%;
@@ -71,7 +73,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 select { 
 	width: 45%; 
 	margin-bottom: 10px; 
-	margin-left: 10px;
+	margin-right: 10px;
 	background: rgba(0, 0, 0, 0.3);
 	border: none;
 	outline: none;
@@ -88,6 +90,33 @@ select {
 	-ms-transition: box-shadow .5s ease;
 	transition: box-shadow .5s ease;
 }
+
+button { 
+	width: 100%; 
+	margin-bottom: 10px; 
+	margin-left: -10px;
+	background: rgba(0, 0, 0, 0.3);
+	border: none;
+	outline: none;
+	padding: 10px;
+	font-size: 13px;
+	color: #fff;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+	border: 1px solid rgba(0,0,0,0.3);
+	border-radius: 4px;
+	box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
+	-webkit-transition: box-shadow .5s ease;
+	-moz-transition: box-shadow .5s ease;
+	-o-transition: box-shadow .5s ease;
+	-ms-transition: box-shadow .5s ease;
+	transition: box-shadow .5s ease;
+}
+
+.close-button{
+	background: #363434;
+}
+
+
 option {
 	background: rgba(56, 66, 75, 0.849);
 }
@@ -107,3 +136,49 @@ select:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rg
 	margin: auto;
 }
 
+.form-popup {
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 150vw;
+	/* max-width: 1000px; */
+	height: 150vh;
+	padding: 4rem;
+	border-radius: 5px;
+	box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+	z-index: 10;
+	text-align: center;
+  }
+
+.popup{
+	color: rgb(0, 0, 0);
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	/* max-width: 1000px; */
+	height: 600px;
+	padding: 4rem;
+	border-radius: 5px;
+	box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+	z-index: 10;
+	text-align: center;
+  }
+
+#map {
+height: 100%;
+max-height: 800px;
+/* The height is 400 pixels */
+width: 100%;
+max-width: 800px;
+/* The width is the width of the web page */
+
+}
