Fix district button. Add requirement for fiona.

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
       <div class="flex-container">
 
           <div class="flex-item" id="open">
-            <button class="open-button" onclick="openForm()">Click To Open The Map And Select District</button>
+            <button class="open-button" id="openBtn" onclick="openForm()">Click To Open The Map And Select District</button>
           </div>
           <div class="form-popup" id="myForm" style="display: none;">
             <form action="/action_page.php" class="form-container">
